--- a/.gitignore
+++ b/.gitignore
@@ -8,25 +8,25 @@
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*hs_err_pid*
 
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
+*.idea/workspace.xml
+*.idea/tasks.xml
+*.idea/dictionaries
+*.idea/vcs.xml
+*.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+*.idea/dataSources.ids
+*.idea/dataSources.xml
+*.idea/dataSources.local.xml
+*.idea/sqlDataSources.xml
+*.idea/dynamic.xml
+*.idea/uiDesigner.xml
 
 
 
 # IntelliJ
-/out/
+*/out/
